--- a/public/css/viewselfhealing.css
+++ b/public/css/viewselfhealing.css
@@ -2,12 +2,16 @@ body {
   background-color: #ededed;
 }
 
+.container{
+  display: flex;
+}
+
 h2 {
   width: 1000px;
   color: rgba(0, 0, 0, 1);
-  position: absolute;
-  top: 10px;
-  left: 140px;
+  position: relative;
+  top: 100px;
+  left: 100px;
   font-family: Nunito;
   font-weight: Regular;
   font-size: 30px;
@@ -15,12 +19,15 @@ h2 {
   text-align: center;
 }
 
-.container {
-  width: 500px;
+.box{
+  width: 600px;
   height: 360px;
   top: -40px;
   left: 20px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .v98_81 {
@@ -145,9 +152,10 @@ h2 {
 /* The Close Button */
 .close {
   color: #aaaaaa;
-  float: right;
+  float: left;
   font-size: 28px;
   font-weight: bold;
+  text-align: right;
 }
 
 .close:hover,
