--- a/public/css/selfhealing.css
+++ b/public/css/selfhealing.css
@@ -1,4 +1,4 @@
-* {
+/** {
     box-sizing: border-box;
   }
   
@@ -6,18 +6,18 @@
     font-size: 14px;
     background-color: #ededed;
   }
-  
-  .atas {
+  */
+  #atas {
     width: 1200px;
-    height: 578px;
+    height: 500px;
     opacity: 1;
-    position: absolute;
-    top: 50px;
-    left: 100px;
+    position: relative;
+    top: -30px;
+    left: -200px;
     overflow: hidden;
   }
   
-  h1 {
+  #judul {
     width: 820px;
     color: rgba(0, 0, 0, 1);
     position: absolute;
@@ -29,32 +29,33 @@
     text-align: left;
   }
   
-  .v91_17 {
-    width: 500px;
+  #tulisan {
+    width: 530px;
     color: rgba(0, 0, 0, 1);
     position: absolute;
     top: 140px;
+    left: 2px;
     font-family: Nunito;
     font-weight: Regular;
-    font-size: 25px;
+    font-size: 23px;
     opacity: 1;
     text-align: justify;
   }
   
-  .orgpusing {
+  #orgpusing {
     width: 1300px;
     height: 500px;
-    background-image: url("./abc1.png");
+    /*background-image: url("{{ asset('img/abc1.png') }}");*/
     background-repeat: no-repeat;
     background-position: left 650px top 50%;
     background-size: 37%;
   }
   
-  .bagiantengah {
+  #bagiantengah {
     width: 1000px;
-    height: 1700px;
+    height: 1000px;
     opacity: 1;
-    position: absolute;
+    position: relative;
     overflow: hidden;
   }
   
@@ -62,23 +63,23 @@
     width: 500px;
     color: rgba(0, 0, 0, 1);
     position: absolute;
-    top: 600px;
-    left: 485px;
+    top: 90px;
+    left: 300px;
     font-family: Nunito;
     font-weight: Regular;
-    font-size: 25px;
+    font-size: 23px;
     opacity: 1;
     text-align: justify;
   }
   
-  .kotakbiru1 {
+  #kotakbiru1 {
     width: 200px;
     height: 200px;
     background: rgba(49, 100, 244, 1);
     opacity: 1;
-    position: absolute;
-    top: 600px;
-    left: 235px;
+    position: relative;
+    top: 80px;
+    left: 30px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -95,23 +96,23 @@
     width: 500px;
     color: rgba(0, 0, 0, 1);
     position: absolute;
-    top: 900px;
-    left: 485px;
+    top: 415px;
+    left: 300px;
     font-family: Nunito;
     font-weight: Regular;
-    font-size: 25px;
+    font-size: 23px;
     opacity: 1;
     text-align: justify;
   }
   
-  .kotakbiru2 {
+  #kotakbiru2 {
     width: 200px;
     height: 200px;
     background: rgba(49, 100, 244, 1);
     opacity: 1;
-    position: absolute;
-    top: 900px;
-    left: 235px;
+    position: relative;
+    top: 400px;
+    left: -140px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -130,9 +131,9 @@
     color: rgba(255, 255, 255, 1);
     background-color: #585858;
     border-radius: 10px;
-    position: absolute;
-    top: 1250px;
-    left: 500px;
+    position: relative;
+    top: 800px;
+    left: -100px;
     font-family: Nunito;
     font-weight: Regular;
     font-size: 30px;
