--- a/public/css/viewselfhealing.css
+++ b/public/css/viewselfhealing.css
@@ -7,26 +7,25 @@ body {
   }
   
   h2 {
-    width: 1000px;
+    width: 900px;
     color: rgba(0, 0, 0, 1);
     position: relative;
-    top: 100px;
-    left: 100px;
+    top: 70px;
+    left: -30px;
     font-family: Nunito;
     font-weight: Regular;
-    font-size: 30px;
     opacity: 1;
     text-align: center;
   }
-  
-  .box{
+
+  #box{
     width: 600px;
     height: 360px;
-    top: -40px;
-    left: 20px;
+    top: -90px;
+    right: 250px;
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
   }
   
@@ -108,10 +107,17 @@ body {
     opacity: 1;
     text-align: left;
   }
+
+  #bawah{
+    height: 500px;
+    position: relative;
+  }
+
   #myBtn {
+    height: 50px;
     position: relative;
     top: 300px;
-    left: 50%;
+    left: 400px;
     font-size: 18px;
     color: white;
     padding: 10px 20px;
